# svmedia_backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.docker.txt
alembic/: env.py
alembic/versions/: 0ff859392bd9_init.py  149d8a14e7da_init.py
app/: database.py  dependency.py  main.py
app/core/: config.py
codes/: models.py  schemas.py  services.py
codes/api/: v1.py
media/: archive_service.py
media/api/: v1.py
scripts/: create_admin.py
users/: models.py  schemas.py  services.py
users/api/: v1.py
