[project]
name = "svmedia"
version = "0.1.0"
description = "SVMedia Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "sqlalchemy==2.0.25",
    "asyncpg==0.29.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.7",
    "boto3==1.34.29",
    "python-dotenv==1.0.1",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "alembic==1.13.1",
    "pydantic[email]==2.6.1",
    "aiobotocore>=2.13.3",
    "zipstream-ng>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "isort==5.13.2",
    "httpx==0.26.0",
    "types-python-jose==3.3.4.8",
    "types-passlib==1.7.7.13",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing" 
